--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -3,5 +3,6 @@
         <file>qml/main.qml</file>
         <file>qml/RecentFilesPage.qml</file>
         <file>qml/EditPage.qml</file>
+        <file>qml/FileGridView.qml</file>
     </qresource>
 </RCC>
