Add dialog suggesting to save file. Show the dialog on goBack signal if file's been changed. Contributes to #1.

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -4,5 +4,6 @@
         <file>qml/RecentFilesPage.qml</file>
         <file>qml/EditPage.qml</file>
         <file>qml/FileGridView.qml</file>
+        <file>qml/ThreeButtonDialog.qml</file>
     </qresource>
 </RCC>
