Add icon, install icons on Unix systems
Resolves #24

--- a/src/qml.qrc
+++ b/src/qml.qrc
@@ -5,6 +5,7 @@
         <file>qml/EditPage.qml</file>
         <file>qml/FileGridView.qml</file>
         <file>qml/SearchOverlay.qml</file>
+        <file>resources/icon.png</file>
         <file>translations/ru_RU.qm</file>
     </qresource>
 </RCC>
